# RustMessenger

gui/: Cargo.toml
gui/sql/: delete-account.sql  delete-contact.sql  get-accounts.sql  get-contacts.sql  get-message.sql  get-messages.sql  insert-account.sql  insert-contact.sql  insert-message.sql  tables.sql  update-account.sql
gui/src/: client.rs  gui.rs  main.rs  states.rs  theme.rs  utils.rs
gui/src/messages/: account_editing.rs  account_specify.rs  chat.rs  contact_creation.rs  database.rs  mod.rs  websocket.rs
gui/src/subscriptions/: websocket.rs
gui/src/tasks/: delete_account.rs  delete_contact.rs  download.rs  get_accounts.rs  get_contacts.rs  get_messages.rs  init_tables.rs  insert_account.rs  insert_contact.rs  insert_message.rs  load_messages.rs  mod.rs  read_data.rs  update_account.rs  write_data.rs
gui/src/views/: account_editing.rs  account_specify.rs  chat.rs  contact_creation.rs  mod.rs
sdk/: Cargo.toml
sdk/src/: constants.rs  interface.rs  lib.rs  states.rs
server/: .rustfmt.toml  Cargo.toml
server/sql/: delete-messages.sql  get-messages-all.sql  get-messages-with.sql  send-message.sql  tables.sql
server/src/: cdn.rs  main.rs  rpc.rs  states.rs  websocket.rs
