[package]
name = "project-toot-gui"
version = "0.0.1"
edition = "2021"

[dependencies]
project-toot-sdk = { path = "../sdk" }
aes-siv = "~0.7"
borsh = { version = "~1.3", features = [ "derive" ] }
bs58 = "~0.5"
chrono = "~0.4"
ed25519-dalek = { version = "~2.1", features = [ "serde" ] }
hex = "~0.4"
home = "~0.5"
iced = { version = "~0.10", features = [ "tokio" ] }
rand = "~0.8"
reqwest = { version = "~0.11", features = [ "blocking" ] }
sha2 = "~0.10"
tokio = { version = "~1.35", features = [ "fs", "macros" ] }
tokio-rusqlite = "~0.5"
tokio-tungstenite = "~0.21"
x25519-dalek = "~2.0"
futures = "~0.3"
rusqlite = { version = "~0.30", features = [ "functions" ] }
url = "~2.5"
