[package]
name = "project-toot-server"
version = "0.0.1"
edition = "2021"

[dependencies]
project-toot-sdk = { path = "../sdk" }
axum = { version = "~0.7", features = [ "json", "ws" ] }
bb8 = "~0.8"
bb8-postgres = "~0.8"
bs58 = "~0.5"
borsh = { version = "~1.3", features = [ "derive" ] }
chrono = "~0.4"
ed25519-dalek = { version = "~2.1", features = [ "digest" ] }
futures = "~0.3"
hex = "~0.4"
sha2 = "~0.10"
tokio = { version = "~1.35", features = [ "macros", "rt-multi-thread", "fs" ] }
tokio-postgres = { version = "~0.7", features = [ "with-chrono-0_4" ] }
